chore: add field 'disableBotsNotifications' to config
