# src/api/routes/admin.routers.js
@@ -161,6 +161,7 @@ router.put('/configs/update',
             'disableCrawler', 'developmentFaze',
             'mediaFileSizeLimit', 'profileFileSizeLimit', 'profileImageCountLimit',
             'mediaFileExtensionLimit', 'profileImageExtensionLimit', 'torrentDownloadMaxFileSize',
+            'disableBotsNotifications',
         ]),
     middlewares.validateApiParamsAdmin.apiParams_sendError,
     middlewares.auth.checkUserRolePermission(['admin']),
